Fixed h1 spacing

--- a/style.css
+++ b/style.css
@@ -985,13 +985,13 @@ h3 {
 	margin: 0;
 }
 .home-p {
-	padding: 1em;
+	padding: 0 1em 1em 1em;
 	margin: 0;
 	text-indent: 2rem;
 }
 /* ----- ABOUT ----- */
 .selfie-description {
-	margin: 0;
+	margin: 0 0 1em 0;
 }
 .selfie-wrapper {
 		align-items: center;
@@ -1033,6 +1033,7 @@ h3 {
 .gallery-2-p {
 	padding: 0 1em;
 	text-indent: 2rem;
+	margin: 0 0 2em 0;
 }
 /* ----- CONTACT ----- */
 .contact-p {
